src/targets/kml/java/flipsTargetKmlParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 flipsTargetKml.g 2010-06-03 21:54:21




import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class flipsTargetKmlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FLY", "LTR", "CMD", "PAR", "POS", "X", "FIX", "REL", "GEO", "Y", "Z", "ROL", "PIT", "YAW", "PRE", "VEL", "SPD", "AIR", "GND", "ACT", "ELE", "AIL", "RUD", "FLA", "THR", "TRI", "TIM", "RAD", "DIR", "L", "R", "CW", "CCW", "FloatingPointLiteral", "BinaryLiteral", "OctalLiteral", "DecimalLiteral", "HexLiteral", "Identifier", "StringLiteral", "Digit", "NonZeroDigit", "BinaryDigit", "HexDigit", "Exponent", "WS", "Comment", "LineComment", "'-'"
    };
    public static final int AIL=25;
    public static final int FIX=10;
    public static final int THR=28;
    public static final int FLA=27;
    public static final int SPD=20;
    public static final int OctalLiteral=39;
    public static final int AIR=21;
    public static final int LineComment=51;
    public static final int Exponent=48;
    public static final int YAW=17;
    public static final int PRE=18;
    public static final int EOF=-1;
    public static final int HexDigit=47;
    public static final int ROL=15;
    public static final int Identifier=42;
    public static final int TIM=30;
    public static final int T__52=52;
    public static final int Comment=50;
    public static final int POS=8;
    public static final int RAD=31;
    public static final int ELE=24;
    public static final int PAR=7;
    public static final int GEO=12;
    public static final int HexLiteral=41;
    public static final int ACT=23;
    public static final int GND=22;
    public static final int L=33;
    public static final int VEL=19;
    public static final int TRI=29;
    public static final int CMD=6;
    public static final int PIT=16;
    public static final int REL=11;
    public static final int R=34;
    public static final int Digit=44;
    public static final int DecimalLiteral=40;
    public static final int Y=13;
    public static final int X=9;
    public static final int CCW=36;
    public static final int Z=14;
    public static final int StringLiteral=43;
    public static final int CW=35;
    public static final int WS=49;
    public static final int FLY=4;
    public static final int RUD=26;
    public static final int LTR=5;
    public static final int DIR=32;
    public static final int NonZeroDigit=45;
    public static final int BinaryLiteral=38;
    public static final int BinaryDigit=46;
    public static final int FloatingPointLiteral=37;

    // delegates
    // delegators


        public flipsTargetKmlParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public flipsTargetKmlParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return flipsTargetKmlParser.tokenNames; }
    public String getGrammarFileName() { return "flipsTargetKml.g"; }


      public StringBuilder output = new StringBuilder();
      public boolean HasWaypoint = false;
      public double Latitude = 0d;
      public double Longitude = 0d;
      public double Altitude = 0d;
      
      public void setLatitude(double latitude) {
        Latitude = latitude;
        HasWaypoint = true;
      }
      
      public void setLongitude(double longitude) {
        Longitude = longitude;
        HasWaypoint = true;
      }
        
      public void setFixedAltitude(double altitude) {
        Altitude = -altitude; // Inverse aerospace coordinates
        HasWaypoint = true;
      }
      
      public void setRelativeAltitude(double altitude) {
        Altitude = Altitude + -altitude; // Inverse aerospace coordinates
        HasWaypoint = true;
      }
      
      public void processCoordinate() {
        if (HasWaypoint) {
          output.append("      " + Longitude + "," + Latitude + "," + Altitude + "\n");
          HasWaypoint = false;
        }
      }



    // $ANTLR start "flightPlan"
    // flipsTargetKml.g:73:1: flightPlan : ( instruction )* ;
    public final void flightPlan() throws RecognitionException {
        try {
            // flipsTargetKml.g:74:2: ( ( instruction )* )
            // flipsTargetKml.g:74:4: ( instruction )*
            {
            output.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
            output.append("<kml xmlns=\"http://www.opengis.net/kml/2.2\" xmlns:gx=\"http://www.google.com/kml/ext/2.2\" xmlns:kml=\"http://www.opengis.net/kml/2.2\" xmlns:atom=\"http://www.w3.org/2005/Atom\">\n");
            output.append("<Document>\n");
            output.append("  <Style id=\"flightPath\">\n");
            output.append("    <LineStyle>\n");
            output.append("      <width>3</width>\n");
            output.append("    </LineStyle>\n");
            output.append("    <PolyStyle>\n");
            output.append("      <color>bf000000</color>\n");
            output.append("    </PolyStyle>\n");
            output.append("  </Style>\n");
            output.append("  <Placemark>\n");
            output.append("    <name>FLIPS Flight Plan</name>\n");
            output.append("    <styleUrl>#flightPath</styleUrl>\n");
            output.append("    <LineString>\n");
            output.append("      <extrude>1</extrude>\n");
            output.append("      <tessellate>1</tessellate>\n");
            output.append("      <altitudeMode>absolute</altitudeMode>\n");
            output.append("      <coordinates>\n");
            // flipsTargetKml.g:93:3: ( instruction )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=FLY && LA1_0<=CMD)||LA1_0==POS||(LA1_0>=VEL && LA1_0<=SPD)||LA1_0==ACT||(LA1_0>=TRI && LA1_0<=DIR)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // flipsTargetKml.g:93:3: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_flightPlan116);
            	    instruction();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            output.append("      </coordinates>\n");
            output.append("    </LineString>\n");
            output.append("  </Placemark>\n");
            output.append("</Document>\n");
            output.append("</kml>");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "flightPlan"


    // $ANTLR start "instruction"
    // flipsTargetKml.g:101:1: instruction : ( fly | loiter | command | position | velocity | speed | actuator | trim | time | radius | direction );
    public final void instruction() throws RecognitionException {
        try {
            // flipsTargetKml.g:102:2: ( fly | loiter | command | position | velocity | speed | actuator | trim | time | radius | direction )
            int alt2=11;
            switch ( input.LA(1) ) {
            case FLY:
                {
                alt2=1;
                }
                break;
            case LTR:
                {
                alt2=2;
                }
                break;
            case CMD:
                {
                alt2=3;
                }
                break;
            case POS:
                {
                alt2=4;
                }
                break;
            case VEL:
                {
                alt2=5;
                }
                break;
            case SPD:
                {
                alt2=6;
                }
                break;
            case ACT:
                {
                alt2=7;
                }
                break;
            case TRI:
                {
                alt2=8;
                }
                break;
            case TIM:
                {
                alt2=9;
                }
                break;
            case RAD:
                {
                alt2=10;
                }
                break;
            case DIR:
                {
                alt2=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // flipsTargetKml.g:102:4: fly
                    {
                    pushFollow(FOLLOW_fly_in_instruction148);
                    fly();

                    state._fsp--;

                    processCoordinate();

                    }
                    break;
                case 2 :
                    // flipsTargetKml.g:103:4: loiter
                    {
                    pushFollow(FOLLOW_loiter_in_instruction155);
                    loiter();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // flipsTargetKml.g:104:4: command
                    {
                    pushFollow(FOLLOW_command_in_instruction160);
                    command();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // flipsTargetKml.g:105:4: position
                    {
                    pushFollow(FOLLOW_position_in_instruction165);
                    position();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // flipsTargetKml.g:106:4: velocity
                    {
                    pushFollow(FOLLOW_velocity_in_instruction170);
                    velocity();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // flipsTargetKml.g:107:4: speed
                    {
                    pushFollow(FOLLOW_speed_in_instruction175);
                    speed();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // flipsTargetKml.g:108:4: actuator
                    {
                    pushFollow(FOLLOW_actuator_in_instruction180);
                    actuator();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // flipsTargetKml.g:109:4: trim
                    {
                    pushFollow(FOLLOW_trim_in_instruction185);
                    trim();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // flipsTargetKml.g:110:4: time
                    {
                    pushFollow(FOLLOW_time_in_instruction190);
                    time();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // flipsTargetKml.g:111:4: radius
                    {
                    pushFollow(FOLLOW_radius_in_instruction195);
                    radius();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // flipsTargetKml.g:112:4: direction
                    {
                    pushFollow(FOLLOW_direction_in_instruction200);
                    direction();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "instruction"


    // $ANTLR start "fly"
    // flipsTargetKml.g:117:1: fly : FLY ;
    public final void fly() throws RecognitionException {
        try {
            // flipsTargetKml.g:117:5: ( FLY )
            // flipsTargetKml.g:117:7: FLY
            {
            match(input,FLY,FOLLOW_FLY_in_fly212); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fly"


    // $ANTLR start "loiter"
    // flipsTargetKml.g:119:1: loiter : LTR ;
    public final void loiter() throws RecognitionException {
        try {
            // flipsTargetKml.g:119:8: ( LTR )
            // flipsTargetKml.g:119:10: LTR
            {
            match(input,LTR,FOLLOW_LTR_in_loiter220); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "loiter"


    // $ANTLR start "command"
    // flipsTargetKml.g:121:1: command : ( CMD x= integerValue | CMD PAR y= numericValue );
    public final void command() throws RecognitionException {
        int x = 0;

        double y = 0.0;


        try {
            // flipsTargetKml.g:121:9: ( CMD x= integerValue | CMD PAR y= numericValue )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CMD) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==PAR) ) {
                    alt3=2;
                }
                else if ( ((LA3_1>=BinaryLiteral && LA3_1<=HexLiteral)||LA3_1==52) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // flipsTargetKml.g:121:11: CMD x= integerValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command228); 
                    pushFollow(FOLLOW_integerValue_in_command232);
                    x=integerValue();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // flipsTargetKml.g:122:4: CMD PAR y= numericValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command237); 
                    match(input,PAR,FOLLOW_PAR_in_command239); 
                    pushFollow(FOLLOW_numericValue_in_command243);
                    y=numericValue();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "command"


    // $ANTLR start "position"
    // flipsTargetKml.g:127:1: position : ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue );
    public final void position() throws RecognitionException {
        double x = 0.0;


        try {
            // flipsTargetKml.g:127:9: ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue )
            int alt4=16;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // flipsTargetKml.g:127:11: POS X FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position254); 
                    match(input,X,FOLLOW_X_in_position256); 
                    match(input,FIX,FOLLOW_FIX_in_position258); 
                    pushFollow(FOLLOW_numericValue_in_position262);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // flipsTargetKml.g:128:4: POS X REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position267); 
                    match(input,X,FOLLOW_X_in_position269); 
                    match(input,REL,FOLLOW_REL_in_position271); 
                    pushFollow(FOLLOW_numericValue_in_position275);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // flipsTargetKml.g:129:4: POS X GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position280); 
                    match(input,X,FOLLOW_X_in_position282); 
                    match(input,GEO,FOLLOW_GEO_in_position284); 
                    pushFollow(FOLLOW_numericValue_in_position288);
                    x=numericValue();

                    state._fsp--;

                    setLongitude(x);

                    }
                    break;
                case 4 :
                    // flipsTargetKml.g:130:4: POS Y FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position295); 
                    match(input,Y,FOLLOW_Y_in_position297); 
                    match(input,FIX,FOLLOW_FIX_in_position299); 
                    pushFollow(FOLLOW_numericValue_in_position303);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // flipsTargetKml.g:131:4: POS Y REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position308); 
                    match(input,Y,FOLLOW_Y_in_position310); 
                    match(input,REL,FOLLOW_REL_in_position312); 
                    pushFollow(FOLLOW_numericValue_in_position316);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // flipsTargetKml.g:132:4: POS Y GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position321); 
                    match(input,Y,FOLLOW_Y_in_position323); 
                    match(input,GEO,FOLLOW_GEO_in_position325); 
                    pushFollow(FOLLOW_numericValue_in_position329);
                    x=numericValue();

                    state._fsp--;

                    setLatitude(x);

                    }
                    break;
                case 7 :
                    // flipsTargetKml.g:133:4: POS Z FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position336); 
                    match(input,Z,FOLLOW_Z_in_position338); 
                    match(input,FIX,FOLLOW_FIX_in_position340); 
                    pushFollow(FOLLOW_numericValue_in_position344);
                    x=numericValue();

                    state._fsp--;

                    setFixedAltitude(x);

                    }
                    break;
                case 8 :
                    // flipsTargetKml.g:134:4: POS Z REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position351); 
                    match(input,Z,FOLLOW_Z_in_position353); 
                    match(input,REL,FOLLOW_REL_in_position355); 
                    pushFollow(FOLLOW_numericValue_in_position359);
                    x=numericValue();

                    state._fsp--;

                    setRelativeAltitude(x);

                    }
                    break;
                case 9 :
                    // flipsTargetKml.g:135:4: POS ROL FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position366); 
                    match(input,ROL,FOLLOW_ROL_in_position368); 
                    match(input,FIX,FOLLOW_FIX_in_position370); 
                    pushFollow(FOLLOW_numericValue_in_position374);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // flipsTargetKml.g:136:4: POS ROL REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position379); 
                    match(input,ROL,FOLLOW_ROL_in_position381); 
                    match(input,REL,FOLLOW_REL_in_position383); 
                    pushFollow(FOLLOW_numericValue_in_position387);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // flipsTargetKml.g:137:4: POS PIT FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position392); 
                    match(input,PIT,FOLLOW_PIT_in_position394); 
                    match(input,FIX,FOLLOW_FIX_in_position396); 
                    pushFollow(FOLLOW_numericValue_in_position400);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 12 :
                    // flipsTargetKml.g:138:4: POS PIT REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position405); 
                    match(input,PIT,FOLLOW_PIT_in_position407); 
                    match(input,REL,FOLLOW_REL_in_position409); 
                    pushFollow(FOLLOW_numericValue_in_position413);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 13 :
                    // flipsTargetKml.g:139:4: POS YAW FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position418); 
                    match(input,YAW,FOLLOW_YAW_in_position420); 
                    match(input,FIX,FOLLOW_FIX_in_position422); 
                    pushFollow(FOLLOW_numericValue_in_position426);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 14 :
                    // flipsTargetKml.g:140:4: POS YAW REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position431); 
                    match(input,YAW,FOLLOW_YAW_in_position433); 
                    match(input,REL,FOLLOW_REL_in_position435); 
                    pushFollow(FOLLOW_numericValue_in_position439);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 15 :
                    // flipsTargetKml.g:141:4: POS PRE FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position444); 
                    match(input,PRE,FOLLOW_PRE_in_position446); 
                    match(input,FIX,FOLLOW_FIX_in_position448); 
                    pushFollow(FOLLOW_numericValue_in_position452);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 16 :
                    // flipsTargetKml.g:142:4: POS PRE REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position457); 
                    match(input,PRE,FOLLOW_PRE_in_position459); 
                    match(input,REL,FOLLOW_REL_in_position461); 
                    pushFollow(FOLLOW_numericValue_in_position465);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "position"


    // $ANTLR start "velocity"
    // flipsTargetKml.g:147:1: velocity : ( VEL X FIX x= numericValue | VEL X REL x= numericValue | VEL Y FIX x= numericValue | VEL Y REL x= numericValue | VEL Z FIX x= numericValue | VEL Z REL x= numericValue | VEL ROL FIX x= numericValue | VEL ROL REL x= numericValue | VEL PIT FIX x= numericValue | VEL PIT REL x= numericValue | VEL YAW FIX x= numericValue | VEL YAW REL x= numericValue | VEL PRE FIX x= numericValue | VEL PRE REL x= numericValue );
    public final void velocity() throws RecognitionException {
        double x = 0.0;


        try {
            // flipsTargetKml.g:147:9: ( VEL X FIX x= numericValue | VEL X REL x= numericValue | VEL Y FIX x= numericValue | VEL Y REL x= numericValue | VEL Z FIX x= numericValue | VEL Z REL x= numericValue | VEL ROL FIX x= numericValue | VEL ROL REL x= numericValue | VEL PIT FIX x= numericValue | VEL PIT REL x= numericValue | VEL YAW FIX x= numericValue | VEL YAW REL x= numericValue | VEL PRE FIX x= numericValue | VEL PRE REL x= numericValue )
            int alt5=14;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // flipsTargetKml.g:147:11: VEL X FIX x= numericValue
                    {
                    match(input,VEL,FOLLOW_VEL_in_velocity476); 
                    match(input,X,FOLLOW_X_in_velocity478); 
                    match(input,FIX,FOLLOW_FIX_in_velocity480); 
                    pushFollow(FOLLOW_numericValue_in_velocity484);
                    x=numericValue();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // flipsTargetKml.g:148:4: VEL X REL x= numericValue
                    {
                    match(input,VEL,FOLLOW_VEL_in_velocity489); 
                    match(input,X,FOLLOW_X_in_velocity491); 
                    match(input,REL,FOLLOW_REL_in_velocity493); 
                    pushFollow(FOLLOW_numericValue_in_velocity497);
                    x=numericValue();

                    state._fsp--;

